--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -18,7 +18,7 @@ jobs:
 
       # Trivy Scan
       - name: Run Trivy SCA scan
-        uses: aquasecurity/trivy-action@v0.28.0
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: 'scanning'  # SCA scanning
           format: 'json'
