--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Run Trivy SCA scan
         uses: aquasecurity/trivy-action@0.28.0
         with:
-          scan-type: 'fi'  # SCA scanning
+          scan-type: 'fs'  # SCA scanning
           format: 'json'
           output: trivy-report.json
           directory: .  
