--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -19,6 +19,10 @@ jobs:
       # Trivy Scan
       - name: Run Trivy SCA scan
         uses: aquasecurity/trivy-action@0.28.0
+        env:
+          # https://github.com/aquasecurity/trivy/discussions/7668#discussioncomment-11141034
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db,aquasec/trivy-db,ghcr.io/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db,aquasec/trivy-java-db,ghcr.io/aquasecurity/trivy-java-db
         with:
           scan-type: 'fs'  # SCA scanning
           format: 'json'
