--- a/.github/workflows/sca.yml
+++ b/.github/workflows/sca.yml
@@ -31,21 +31,10 @@ jobs:
           skip-update: true
 
       # Grype Scan
-      # - name: Run Grype SCA scan
-      #   run: |
-      #     curl -sSL https://github.com/anchore/grype/releases/download/v0.61.0/grype_0.61.0_linux_amd64.tar.gz | tar -xzv
-      #     ./grype -o json > grype-report.json
-      - name: grype Scan current project
-        id: scan
-        uses: anchore/scan-action@v2
-        with:
-          path: "./"
-          fail-build: true
-          acs-report-enable: true
-      - name: grype upload Anchore scan SARIF report
-        uses: github/codeql-action/upload-sarif@v1
-        with:
-          sarif_file: ${{ steps.scan.outputs.sarif }}
+      - name: Run Grype SCA scan
+        run: |
+          curl -sSL https://github.com/anchore/grype/releases/download/v0.61.0/grype_0.61.0_linux_amd64.tar.gz | tar -xzv
+          ./grype -o json > grype-report.json
 
       # Checkmarx Scan
       - name: Checkmarx AST CLI Action
