--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -9,6 +9,15 @@ jobs:
   grype-scan:
     runs-on: ubuntu-latest
     steps:
+      - name: Scan current project
+        uses: anchore/scan-action@v3
+        with:
+          path: "."
+      - name: upload Anchore scan SARIF report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: ${{ steps.scan.outputs.sarif }}
+
       - name: Checkout Repository
         uses: actions/checkout@v2
 
@@ -21,7 +30,7 @@ jobs:
         run: grype dir:. -o json > grype-results.json
 
       - name: Upload Grype Scan Results
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: grype-scan-results
           path: grype-results.json
