--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -1,52 +1,40 @@
-name: Grype Vulnerability Scan
+# .github/workflows/gyrape-scan.yml
 
+name: Gyrape Security Scan
+
+# Trigger the workflow on push and pull request events to main or develop branches
 on:
   push:
     branches:
       - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
 jobs:
-  grype-scan:
+  gyrape-scan:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Scan current project
-        uses: anchore/scan-action@v3
-        with:
-          path: "."
-          output-format: "json"  # Set output format to JSON
-          output-file: "scan-output.json"  # Save JSON output to a file
-      
-      - name: Save and display scan result
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install Gyrape CLI
         run: |
-          # Save the output to a file and display it in the logs
-          mkdir -p output
-          grype -o json dir:. > output/grype-results.json
-          cat output/grype-results.json  # Display the JSON output in the GitHub Actions log
+          curl -sSL https://gyrape.io/install | bash
 
-      - name: Upload Grype scan results
-        uses: actions/upload-artifact@v4
+      - name: Run Gyrape Security Scan
+        run: |
+          gyrape . ./gyrape-config.json
+
+      - name: Generate Gyrape Scan Report
+        run: |
+          gyrape report --scan-results ./gyrape-results.json --output ./report.html
+
+      - name: Upload report artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: grype-results
-          path: output/grype-results.json
-
-      # - name: upload Anchore scan SARIF report
-      #   uses: github/codeql-action/upload-sarif@v3
-      #   with:
-      #     sarif_file: ${{ steps.scan.outputs.sarif }}
-
-      # - name: Checkout Repository
-      #   uses: actions/checkout@v2
-
-      # - name: Install Grype
-      #   run: |
-      #     curl -sSL https://github.com/anchore/grype/releases/download/v0.61.0/grype_0.61.0_linux_amd64.tar.gz | tar -xzv
-      #     sudo mv grype /usr/local/bin/
-
-      # - name: Run Grype Scan on Current Directory
-      #   run: grype dir:. -o json > grype-results.json
-
-      # - name: Upload Grype Scan Results
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: grype-scan-results
-      #     path: grype-results.json
+          name: gyrape-scan-report
+          path: ./report.html
