--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -17,4 +17,4 @@ jobs:
     - name: upload Anchore scan SARIF report
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: ${{ steps.scan.outputs.sarif }}
+        sarif_file: ${{ steps.anchore_job.outputs.sarif }}
