--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -14,7 +14,11 @@ jobs:
         path: "./"
         fail-build: true
         acs-report-enable: true
-    - name: upload Anchore scan SARIF report
+    - name: Save scan output to file
+      run: |
+        mkdir -p scan-reports
+        cp /tmp/anchore_report.json scan-reports/anchore_scan_report.json
+    - name: Upload Anchore scan SARIF report
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: ${{ steps.anchore_job.outputs.sarif }}
+        sarif_file: ./scan-reports/anchore_scan_report.json
