--- a/.github/workflows/grype.yml
+++ b/.github/workflows/grype.yml
@@ -14,10 +14,16 @@ jobs:
         path: "./"
         fail-build: true
         acs-report-enable: true
-    - name: Save scan output to file
+    - name: Save Anchore scan report to file
       run: |
-        mkdir -p scan-reports
-        cp /tmp/anchore_report.json scan-reports/anchore_scan_report.json
+        # Check if the report exists and move it to a folder for uploading
+        if [ -f "$HOME/anchore_report.json" ]; then
+          mkdir -p scan-reports
+          mv $HOME/anchore_report.json scan-reports/anchore_scan_report.json
+        else
+          echo "Anchore report not found"
+          exit 1
+        fi
     - name: Upload Anchore scan SARIF report
       uses: github/codeql-action/upload-sarif@v2
       with:
