--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -2,10 +2,11 @@ name: Checkmarx Sarif Integration
 
 # Controls when the workflow will run
 on:
-  pull_request:
-    types: [opened, reopened, synchronize]
+  push:
     branches:
-      - master
+      - main
+  pull_request:
+    branches:
       - main
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
