--- a/.github/workflows/checkmarx.yml
+++ b/.github/workflows/checkmarx.yml
@@ -30,7 +30,8 @@ jobs:
           cx_tenant: accuknox-nfr # This should be replaced by users' tenant name
           additional_params: --report-format sarif --output-path .
       - name: Upload SARIF file
-        uses: github/codeql-action/upload-sarif@v3
+        uses: actions/upload-artifact@v3
         with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: cx_result.sarif
+          name: sca-scan-reports
+          path: |
+            cx_result.sarif
