--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -15,35 +15,42 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - run: |
-        semgrep scan --json --json-output=semgrep_results.json
+        # Run Semgrep scan and store the output in JSON
+        semgrep scan --json --json-output /tmp/semgrep.json
+        
+        # Capture GitHub-related variables and prepend them to the Semgrep output
+        metadata_json=$(jq -n \
+          --arg repo "${{ github.repository }}" \
+          --arg sha "${{ github.sha }}" \
+          --arg ref "${{ github.ref }}" \
+          --arg run_id "${{ github.run_id }}" \
+          --arg run_number "${{ github.run_number }}" \
+          --arg github_url "${{ github.server_url }}/${{ github.repository }}" \
+          --arg github_run_url "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}" \
+          --arg source "$SOURCE" \
+          '{
+            repo: $repo,
+            sha: $sha,
+            ref: $ref,
+            run_id: $run_id,
+            run_number: $run_number,
+            github_url: $github_url,
+            github_run_url: $github_run_url,
+            source: $source
+          }')
 
-    # - name: Fix JSON file levels (optional)
-    #   run: |
-    #       jq 'map(if .level == "low" then .level = "info" else . end)' semgrep_results.json > tmp_results.json && mv tmp_results.json semgrep_results.json
+        # Append the metadata to the Semgrep JSON output
+        semgrep_json=$(cat /tmp/semgrep.json)
+        combined_json=$(echo "$metadata_json" | jq --argjson semgrep "$semgrep_json" '. + {semgrep: $semgrep}')
 
-    - name: Append GitHub metadata to JSON
-      env:
-          GITHUB_REPOSITORY: ${{ github.repository }}
-          GITHUB_SHA: ${{ github.sha }}
-          GITHUB_REF: ${{ github.ref }}
-          GITHUB_RUN_ID: ${{ github.run_id }}
-          GITHUB_RUN_NUMBER: ${{ github.run_number }}
-          SOURCE: "GitHub"
-      run: |
-          GITHUB_URL="${{ github.server_url }}/${{ github.repository }}"
-          GITHUB_RUN_URL="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-          jq --arg repo "$GITHUB_REPOSITORY" \
-             --arg sha "$GITHUB_SHA" \
-             --arg ref "$GITHUB_REF" \
-             --arg run_id "$GITHUB_RUN_ID" \
-             --arg run_number "$GITHUB_RUN_NUMBER" \
-             --arg github_url "$GITHUB_URL" \
-             --arg github_run_url "$GITHUB_RUN_URL" \
-             --arg source "$SOURCE" \
-             '.results |= map(. + { "repository": $repo, "commit": $sha, "ref": $ref, "workflow_run_id": $run_id, "workflow_run_number": $run_number, "repository_url": $github_url, "workflow_run_url": $github_run_url, "source": $source })' semgrep_results.json > tmp_results.json && mv tmp_results.json semgrep_results.json
+        # Save the combined JSON to the output file
+        echo "$combined_json" > /tmp/combined_output.json
 
-    - name: Upload Semgrep JSON results
+    - name: View the output
+      run: cat /tmp/combined_output.json
+
+    - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: semgrep-results
-        path: semgrep_results.json
+        name: semgrep-report
+        path: /tmp/combined_output.json
