--- a/.github/workflows/trivy-checkmarx_sca_scan.yml
+++ b/.github/workflows/trivy-checkmarx_sca_scan.yml
@@ -1,12 +1,10 @@
 name: SCA Scan
 
 on:
+  workflow_dispatch: {}
   push:
     branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    - main
 
 jobs:
   sca-scan:
